Week 7 Day 2 | QA App 2

--- a/week-7-day-1/qa-app/theme/app.scss
+++ b/week-7-day-1/qa-app/theme/app.scss
@@ -70,3 +70,8 @@
   background-color: #31d885;
   border-color: #31d885;
 }
+
+.list-group-item-action.active {
+  background-color: #8409de;
+  color: #fff;
+}
