--- a/week-7-day-1/qa-app/src/assets/css/app.css
+++ b/week-7-day-1/qa-app/src/assets/css/app.css
@@ -66,3 +66,19 @@
   background-color: #31d885;
   border-color: #31d885;
 }
+
+.list-group-item-action.active {
+  background-color: #f6e9ff;
+  color: #666;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.category-item .check-icon {
+  color: #8409de !important;
+}
+
+.alert-primary {
+  background-color: #f6e9ff;
+  border-color: #9a2ce8;
+  color: #666;
+}
