Cevap bölümü eklendi. Editor eklendi. Comments listesi çekildi

--- a/week-7-day-1/qa-app/src/assets/css/app.css
+++ b/week-7-day-1/qa-app/src/assets/css/app.css
@@ -82,3 +82,28 @@
   border-color: #9a2ce8;
   color: #666;
 }
+
+.answerArea textarea {
+  resize: none;
+  margin-left: 2px;
+}
+
+.answerArea textarea::placeholder {
+  color: #6c7578a8;
+}
+
+.text-primary {
+  color: #8409de !important;
+}
+
+.btn-link {
+  text-decoration: none;
+}
+
+.btn-link.text-primary:hover {
+  color: #5c069a !important;
+}
+
+.ql-container {
+  min-height: 200px !important;
+}
